--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             console.log("diffPerSquareSorted", diffPerSquareSorted);
 
             function onImageReceived(event) {
-                console.log("event", event);
+                alert("event", event);
             }
 
             window.addEventListener("message", onImageReceived);
